fixed alignment of images.

--- a/index.css
+++ b/index.css
@@ -300,13 +300,17 @@ button {
 	vertical-align: baseline;
 	box-sizing: border-box;
 	display: flex;
-	align-items: flex-end;
+	align-items: flex-start;
 	width: 100%;
 	height: 100%;
 	background: #fff;
 	border-radius: inherit;
 	padding: 10px 20px;
 	outline: none;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-content: flex-start;
+	justify-content: space-around;
 }
 
 .mathImage {
